@@ -649,6 +649,7 @@ DRIVERNV(hlywodhg)      //                Hollywood Heat (German)
 DRIVERNV(hlywhgfp)      //                Hollywood Heat (German Free Play)
 DRIVERNV(hlywodhf)      //                Hollywood Heat (French)
 DRIVERNV(hlywhffp)      //                Hollywood Heat (French Free Play)
+DRIVERNV(bubba)         //                Bubba the Redneck Werewolf (Hollywood Heat unofficial MOD)
 DRIVERNV(genesis)       //S80b-705: 09/86 Genesis
 DRIVERNV(genesifp)      //                Genesis (Free Play)
 DRIVERNV(genesisg)      //                Genesis (German)
